@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5408 2004/04/01 14:36:48 abs Exp $
+$NetBSD: CHANGES,v 1.5409 2004/04/01 14:39:05 abs Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1652,4 +1652,5 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated qt3 to 3.2.3nb2 [tron 2004-04-01]
 	Added apache-ant15 [abs 2004-04-01]
 	Updated apache-ant to 1.6.1 [abs 2004-04-01]
+	Updated tscp to 1.81 [abs 2004-04-01]
 
